// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectLevel show city options 1`] = `
<p
  className="input required text"
>
  <label>
    province
  </label>
  <select
    className="input-large"
    name="city"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  >
    <option
      disabled={undefined}
      value=""
    />
  </select>
</p>
`;

exports[`SelectLevel show state options 1`] = `
<p
  className="input required text"
>
  <label>
    department
  </label>
  <select
    className="input-large"
    name="state"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  >
    <option
      disabled={undefined}
      value=""
    />
    <option
      value="Beni"
    >
      Beni
    </option>
    <option
      value="Cochabamba"
    >
      Cochabamba
    </option>
  </select>
</p>
`;
